# PrimaCosaCheVa

devel/: .catkin  .rosinstall
devel/include/my_messages/: named_point.h
devel/lib/my_messages/: talker
devel/lib/package1/: move_turtle  talker
devel/lib/pkgconfig/: line.pc  my_messages.pc  package1.pc  turtle_wanderer.pc
devel/lib/python3/dist-packages/my_messages/msg/: __init__.py  _named_point.py
devel/lib/turtle_wanderer/: move_turtle
devel/share/common-lisp/ros/my_messages/msg/: _package.lisp  _package_named_point.lisp  my_messages-msg.asd  named_point.lisp
devel/share/gennodejs/ros/my_messages/msg/: _index.js  named_point.js
devel/share/line/cmake/: lineConfig.cmake
devel/share/my_messages/cmake/: my_messages-msg-extras.cmake  my_messages-msg-paths.cmake  my_messagesConfig.cmake
devel/share/package1/cmake/: package1Config.cmake
devel/share/roseus/ros/my_messages/: manifest.l
devel/share/roseus/ros/package1/: manifest.l
devel/share/roseus/ros/turtle_wanderer/: manifest.l
devel/share/turtle_wanderer/cmake/: turtle_wanderer-msg-paths.cmake  turtle_wandererConfig.cmake
src/line/: CMakeLists.txt
src/line/src/: line.cpp
src/my_messages/: CMakeLists.txt  package.xml
src/my_messages/launch/: launch.launch
src/my_messages/msg/: named_point.msg
src/my_messages/src/: talker.cpp
src/package1/: CMakeLists.txt
src/package1/src/: launch.launch  move_turtle.cpp  talker.cpp
src/turtle_wanderer/: CMakeLists.txt
src/turtle_wanderer/launch/: launch.launch
src/turtle_wanderer/src/: move_turtle.cpp
(+1 files in other folders)
